plugins {
    id 'org.springframework.boot' version '2.7.6'
    id 'io.spring.dependency-management' version '1.1.0'
    id "org.sonarqube" version "3.5.0.2730"
    id 'java'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
}

ext {
    jacocoVersion = '0.8.8'
    checkstyleVersion = "8.38"
    pmdVersion = '6.49.0'
}

group = 'org.theoriok'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'com.google.guava:guava:31.1-jre'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

pmd {
    ruleSets = []
    ignoreFailures = false
    toolVersion = pmdVersion
}

pmdMain {
    ruleSetFiles = files("${project.rootDir}/config/pmd/pmd.xml")
}

pmdTest {
    ruleSetFiles = files("${project.rootDir}/config/pmd/testPmd.xml")
}

checkstyle {
    ignoreFailures = false
    maxErrors = 0
    maxWarnings = 0
    configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
}


sonarqube {
    properties {
        property "sonar.projectKey", "theoriok_adventofcode"
        property "sonar.organization", "theorioksoft"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.rootDir}/build/reports/jacocoAggregatedReport.xml"
        property "sonar.tests", "src/test"
    }
}
